[tool.poetry]
name = "brain-jar"
version = "0.1.0"
description = "A place where we keep our neural nets."
authors = ["BenTenmann <benji.tenmann@me.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "brain_jar"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
kaggle = "^1.5.12"
numpy = "^1.24.1"
jax = "^0.4.1"
jaxlib = "^0.4.1"
flax = "^0.6.3"
scipy = "^1.10.0"
pydantic = "^1.10.4"
scikit-learn = "^1.2.0"
tensorflow = "^2.11.0"
jupyterlab = "^3.5.2"
seaborn = "^0.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
